# VagitanChat

./: .gitignore  .gitmodules  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Client.hpp  IRCClient.cpp  IRCClient.hpp  Makefile.am  NativeClient.cpp  NativeClient.hpp  chat.cpp  chat.hpp  room.cpp  room.hpp  server.cpp  server.hpp  sockets.cpp  sockets.hpp  user.cpp  user.hpp  util.cpp  util.hpp  vagitanchat.cpp
src/.deps/: VagitanChatServer-chat.Po  VagitanChatServer-room.Po  VagitanChatServer-server.Po  VagitanChatServer-sockets.Po  VagitanChatServer-user.Po  VagitanChatServer-util.Po  VagitanChatServer-vagitanchat.Po
src/test/: test.c
